fix(blog): light mode dark mode issue in text

--- a/apps/web/src/app/globals.css
+++ b/apps/web/src/app/globals.css
@@ -201,5 +201,5 @@ pre {
 }
 
 li::marker {
-  @apply !text-primary-foreground;
+  @apply !text-secondary-foreground;
 }
